tests/positive/bookinfo/authorizationpolicy-disallow-wildcard-methods-to.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: bad-details-not-namespaces
  namespace: bookinfo
spec:
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["*"]
        ports: ["9080"]  # Реальный порт из Service
        hosts: ["test"]
        notMethods: ["GET"]
        notPaths: ["/admin"]
        notHosts: ["prod"]
        notPorts: ["9081"]
    when:
    - key: request.auth.claims[iss]
      values: ["https://accounts.google.com"]
