tests/positive/bookinfo/authorizationpolicy-disallow-wildcard-principals-source.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: bad-details-not-namespaces
  namespace: bookinfo
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["*"]  # Запрещаем доступ из kube-system
        namespaces: ["kube-system"]
        requestPrincipals: ["kube-system"]
        ipBlocks: ["10.0.0.0"]
        remoteIpBlocks: ["10.0.0.0"]
        notPrincipals: ["kube-system"]
        notRequestPrincipals: ["kube-system"]
        notNamespaces: ["kube-system2"]
        notIpBlocks: ["10.0.0.0"]
        notRemoteIpBlocks: ["10.0.0.0"]
    to:
    - operation:
        ports: ["9080"]  # Реальный порт из Service
    when:
    - key: request.auth.claims[iss]
      values: ["https://accounts.google.com"]
